# python-network-discovery-tool

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .safety-project.ini  404.html  CHANGES.md  CONTRIBUTING.md  Dockerfile  GOOGLE_STYLE_CHANGES.md  MANIFEST.in  Makefile  README.md  README.setup.md  SECURITY.md  STYLE_GUIDE.md  auto-discover.py  bare_import.py  database.py  dev-check  dev-dashboard  dev-hub  dev-monitor  dev-reset  dev-snapshot  dev-snapshot-diff  dev-snapshot-report  dev-status  dev-tools  dev-troubleshoot  dev-validate  dev-workflow  device.py  devices.py  discover.py  discovery.py  dismiss_warnings.sh  docker-compose.yml  docker-demo.sh  (+20 more)
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: release-planning.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: bandit.yml  ci.yml  dependabot-auto-merge.yml  docker-build.yml  docs.yml  generator-generic-ossf-slsa3-publish.yml  publish-github.yml  publish.yml  python-ci.yml  release-notes.yml  release.yml
docker-setup/: index.html
docs/: docker-setup.md  getting-started.md  index.md  release-process.md
getting-started/: index.html
html/: output.html
improvements/: IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  README.md  SUMMARY.md  cli_improved.py  device_manager_improved.py  json_repository_improved.py  redis_repository_improved.py  requirements.txt  setup.py  test_cli_improved.py  test_device_manager_improved.py  test_redis_repository_improved.py
man/: auto-discover.1
release-process/: index.html
scripts/: README.md  bump_dev_version.py  create_hotfix.py  create_release_branch.py  generate_release_notes.py  make_scripts_executable.sh  release.py
search/: search_index.json
src/network_discovery/: __init__.py  __main__.py
src/network_discovery/application/: __init__.py  interfaces.py
src/network_discovery/core/: __init__.py  discovery.py
src/network_discovery/domain/: __init__.py  device.py  device_manager.py
src/network_discovery/enterprise/: __init__.py  device.py  export.py
src/network_discovery/infrastructure/: __init__.py  notification.py  report.py  repository.py  scanner.py
src/network_discovery/interfaces/: __init__.py  cli.py  settings.py
templates/: layout.html
tests/: __init__.py  conftest.py  test_cli.py  test_cli_new.py  test_device.py  test_device_manager.py  test_docker.py  test_enterprise_device.py  test_enterprise_export.py  test_json_repository.py  test_notification.py  test_redis_repository.py  test_report.py  test_repository.py  test_scanner.py  test_scanner_extended.py  test_scanner_minimal.py  test_scanner_mocked_nmap.py
tools/: dev-update
